<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:orientation="vertical"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.imtanan.finalproject.RegisterActivity" >


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/string_enter_name" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/regname"
    android:id="@+id/editTextName" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/string_choose_username" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/regusername"
    android:id="@+id/editTextUserName" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/string_choose_password" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/regpassword"
    android:id="@+id/editTextPassword" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/string_enter_email" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:hint="@string/regemail"
    android:id="@+id/editTextEmail" />

<!--<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_register"
    android:id="@+id/buttonRegister" /> -->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegister"
        android:src="@drawable/register"
        android:layout_gravity="center_horizontal" />

</LinearLayout>